--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,12 @@ body {
   background-color: rgba(11, 87, 208, 1);
   cursor: pointer;
 }
+
+.form__button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
 .form__back {
   justify-self: start;
   grid-column: span 2;
@@ -104,8 +110,48 @@ body {
   cursor: pointer;
 }
 
+.logged {
+  grid-column: 3 / span 8;
+  background-color: rgba(255, 255, 255, 1);
+  padding: 65px 34px;
+  margin: auto 0;
+  border-radius: 28px;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  column-gap: 20px;
+  row-gap: 32px;
+  min-width: 270px;
+  box-sizing: border-box;
+}
+
+.logged__title {
+  grid-column: span 8;
+  margin: 0;
+  font-size: 27px;
+  justify-self: center;
+  text-align: center;
+}
+
+.logged__button {
+  text-decoration: none;
+  justify-self: center;
+  grid-column: span 8;
+  padding: 13px 40px;
+  border: none;
+  border-radius: 100px;
+  color: rgba(11, 87, 208, 1);
+  background-color: rgba(255, 255, 255, 1);
+  border: solid 1px rgba(11, 87, 208, 1);
+  cursor: pointer;
+}
+
 @media (max-width: 968px) {
   .form {
+    grid-column: 2 / span 10;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .logged {
     grid-column: 2 / span 10;
     grid-template-columns: repeat(4, 1fr);
   }
