--- a/app/globals.css
+++ b/app/globals.css
@@ -24,20 +24,11 @@ body {
   box-sizing: border-box;
 }
 
-.form__button {
-  justify-self: end;
-  grid-column: 7 / span 2;
-  padding: 13px 40px;
-  border: none;
-  border-radius: 100px;
-  color: rgba(255, 255, 255, 1);
-  background-color: rgba(11, 87, 208, 1);
-  cursor: pointer;
-}
-
-.form__button:disabled {
-  background-color: #cccccc;
-  cursor: not-allowed;
+.form__title {
+  grid-column: span 3;
+  margin: 0;
+  font-size: 27px;
+  justify-self: start;
 }
 
 .form__back {
@@ -51,12 +42,28 @@ body {
   cursor: pointer;
 }
 
-.form__error {
+.submit-button {
+  justify-self: end;
+  grid-column: 7 / span 2;
+  padding: 13px 40px;
+  border: none;
+  border-radius: 100px;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(11, 87, 208, 1);
+  cursor: pointer;
+}
+
+.submit-button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.input-field__error {
   padding: 4px 16px 0 16px;
   font-size: 12px;
   color: red;
 }
-.form__input {
+.input-field__input {
   border: solid 1px rgba(73, 69, 79, 1);
   border-radius: 4px;
   height: 48px;
@@ -65,41 +72,35 @@ body {
   box-sizing: border-box;
 }
 
-.form__input:focus {
+.input-field__input:focus {
   outline: none;
   border: solid 2px rgba(11, 87, 208, 1);
   border-radius: 4px;
 }
 
-.form__input_error {
+.input-field__input_error {
   border: solid 2px rgba(255, 0, 0, 1);
 }
 
-.form__input_error:focus {
+.input-field__input_error:focus {
   outline: none;
   border: solid 2px rgba(255, 0, 0, 1);
   border-radius: 4px;
 }
 
-.form__label {
+.input-field__label {
   padding: 4px 16px 0 16px;
   font-size: 12px;
 }
-.form__title {
-  grid-column: span 3;
-  margin: 0;
-  font-size: 27px;
-  justify-self: start;
-}
 
-.form__input-group {
+.input-field {
   grid-column: 5 / span 4;
   display: flex;
   flex-direction: column;
   position: relative;
 }
 
-.form__input-hidebutton {
+.input-field__input-hidebutton {
   border: none;
   background-color: transparent;
   position: absolute;
@@ -151,12 +152,11 @@ body {
     grid-template-columns: repeat(4, 1fr);
   }
 
-  .logged {
-    grid-column: 2 / span 10;
-    grid-template-columns: repeat(4, 1fr);
+  .submit-button {
+    grid-column: 3 / span 2;
   }
 
-  .form__input {
+  .input-field__input {
     font-size: 14px;
   }
 
@@ -164,19 +164,21 @@ body {
     grid-column: span 4;
   }
 
-  .form__input-group {
+  .input-field {
     grid-column: span 4;
   }
-  .form__button {
-    grid-column: 3 / span 2;
-  }
 
-  .form__label {
+  .input-field__label {
     font-size: 9px;
   }
 
-  .form__error {
+  .input-field__error {
     font-size: 9px;
+  }
+
+  .logged {
+    grid-column: 2 / span 10;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
