--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -42,6 +42,11 @@ body {
   cursor: pointer;
 }
 
+.form__back:hover {
+  opacity: 0.7;
+  transition: opacity 0.3s;
+}
+
 .submit-button {
   justify-self: end;
   grid-column: 7 / span 2;
@@ -51,6 +56,11 @@ body {
   color: rgba(255, 255, 255, 1);
   background-color: rgba(11, 87, 208, 1);
   cursor: pointer;
+}
+
+.submit-button:hover {
+  opacity: 0.7;
+  transition: opacity 0.3s;
 }
 
 .submit-button:disabled {
@@ -144,6 +154,11 @@ body {
   background-color: rgba(255, 255, 255, 1);
   border: solid 1px rgba(11, 87, 208, 1);
   cursor: pointer;
+}
+
+.logged__button:hover {
+  opacity: 0.7;
+  transition: opacity 0.3s;
 }
 
 @media (max-width: 968px) {
